# MCXN947-FreeRTOS

./: .gdbinit  .gitmodules  Dockerfile  README.md  arm-gcc.txt  build.sh  find_sources.py  justfile  meson.build
config/: FreeRTOSConfig.h  MCXN947_cm33_core0_flash.ld  MCXN947_cm33_core0_flash_ns.ld
model/: cat.c  cat.h  images.h
models/: model_cat.py  student_model_quant.tflite  teacher_model.keras
scripts/: build-cross.sh  build.sh  debug.sh  flash.sh  setup.sh
src/: blinky.c  blinky.h  did_test_fail.cc  flexspi.c  flexspi.h  inference.cpp  inference.h  main.c  model.c  model.cpp  model.h  uart.c  uart.h
